# CelitechSDKPython

./: .manifest.json  PyPI_README.md  README.md  install.cmd  install.sh  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
documentation/models/: BadRequest.md  CreatePurchase400Response.md  CreatePurchase401Response.md  CreatePurchaseOkResponse.md  CreatePurchaseRequest.md  CreatePurchaseV2OkResponse.md  CreatePurchaseV2Request.md  CreatePurchaseV2_400Response.md  CreatePurchaseV2_401Response.md  EditPurchase400Response.md  EditPurchase401Response.md  EditPurchaseOkResponse.md  EditPurchaseRequest.md  GetAccessTokenOkResponse.md  GetAccessTokenRequest.md  GetEsim400Response.md  GetEsim401Response.md  GetEsimDevice400Response.md  GetEsimDevice401Response.md  GetEsimDeviceOkResponse.md  GetEsimHistory400Response.md  GetEsimHistory401Response.md  GetEsimHistoryOkResponse.md  GetEsimMac400Response.md  GetEsimMac401Response.md  GetEsimMacOkResponse.md  GetEsimOkResponse.md  GetPurchaseConsumption400Response.md  GetPurchaseConsumption401Response.md  GetPurchaseConsumptionOkResponse.md  GrantType.md  ListDestinations400Response.md  ListDestinations401Response.md  ListDestinationsOkResponse.md  ListPackages400Response.md  ListPackages401Response.md  ListPackagesOkResponse.md  ListPurchases400Response.md  ListPurchases401Response.md  ListPurchasesOkResponse.md  (+9 more)
documentation/services/: CelitechService.md  ConsumptionService.md  DestinationsService.md  DeviceService.md  ESimService.md  V2Service.md  (+10 more)
examples/: install.cmd  install.sh  sample.py
(+87 files in other folders)
