[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "celitech-sdk"
version = "2.0.1"
license = { text = "MIT" }
description = """Welcome to the CELITECH API documentation!\n\nUseful links: [Homepage](https://www.celitech.com) | [Support email](mailto:support@celitech.com) | [Blog](https://www.celitech.com/blog/)\n"""
readme = "PyPI_README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0,<3.0.0"
]

[project.urls]
Repository = "https://github.com/Celitech/CelitechSDKPython"
